# VoroGPU

./: .gitignore  CMakeLists.txt  README.md  params.h  test_voronoi.cu  voronoi.cu  voronoi.h  voronoi_defs.h
data/: 20Knormed.xyz
